# EyeTalk

./: .gitignore  GazeDetector.py  README.md  conda_setup.sh  eyefinderreader.py  ipc_reader.py  simple_calibration_ui.py
dlib/image_processing/: render_face_detections.h
eyefinder_cpp/: CMakeLists.txt  constants.h  eyefinder.cpp  eyefinder.h  findEyeCenter.cpp  findEyeCenter.h  findEyeCorner.cpp  findEyeCorner.h  helpers.cpp  helpers.h  main.cpp  run_script.sh
